# subtype

./: .gitignore  README.md  app.abc.py  app.collections-abc.py  app.py  app.pytypes.py  app.subtype-of-noreturn.py  pyproject.toml
subtype/: __init__.py  check.py  models.py  normalisation.py  types.py  utils.py
tests/: conftest.py  test_check.py  test_normalisation.py  test_utils.py
