[tool.poetry]
name = "subtype"
version = "0.1.0"
description = "Python Subtype Checking"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
